--- a/index1.html
+++ b/index1.html
@@ -20,12 +20,12 @@
     <header>
         <menu>
             <nav>
-                <a href="index.html"><span><strong>HOME</strong></span></a>
+                <a href="index1.html"><span><strong>HOME</strong></span></a>
                 <a href="contact.html"><span><strong>CONTACT</strong></span></a>
                 <a href="registration.html"><span><strong>REGISTRATION</strong></span></a>
                 <a href="login.html"><span><strong>LOGIN</strong></span></a>
                 <a href="sample.html"><span><strong>GOOGLE</strong></span></a>
-                <a href="nested.html"><span><strong>NESTED</strong></span></a>
+                <a href="newnested.html"><span><strong>NESTED</strong></span></a>
                 <a href="unordered.html>"><span><strong>UNORDERED</strong></span></a>
             </nav>
         </menu>
