--- a/index1.html
+++ b/index1.html
@@ -21,8 +21,8 @@
         <menu>
             <nav>
                 <a href="index1.html"><span><strong>HOME</strong></span></a>
-                <a href="contact.html"><span><strong>CONTACT</strong></span></a>
-                <a href="registration.html"><span><strong>REGISTRATION</strong></span></a>
+                <a href="ass.html"><span><strong>CONTACT</strong></span></a>
+                <a href="about.html"><span><strong>REGISTRATION</strong></span></a>
                 <a href="login.html"><span><strong>LOGIN</strong></span></a>
                 <a href="sample.html"><span><strong>GOOGLE</strong></span></a>
                 <a href="newnested.html"><span><strong>NESTED</strong></span></a>
